--- a/PRPO_JPA_M2/.gitignore
+++ b/PRPO_JPA_M2/.gitignore
@@ -1,4 +1,7 @@
-target/
+### Maven template
+api/target/
+entitete/target/
+storitve/target/
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -7,5 +10,6 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
-# https://github.com/takari/maven-wrapper#usage-without-binary-jar
-.mvn/wrapper/maven-wrapper.jar
+ObjectStore/
+*.iml
+.idea/
