--- a/PRPO_JPA_M2/storitve/pom.xml
+++ b/PRPO_JPA_M2/storitve/pom.xml
@@ -16,4 +16,11 @@
         <maven.compiler.target>14</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.kumuluz.ee</groupId>
+            <artifactId>kumuluzee-cdi-weld</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
