Added rest functionality and cdi beans

--- a/PRPO_JPA_M2/api/pom.xml
+++ b/PRPO_JPA_M2/api/pom.xml
@@ -11,11 +11,6 @@
 
     <artifactId>api</artifactId>
 
-    <properties>
-        <maven.compiler.source>14</maven.compiler.source>
-        <maven.compiler.target>14</maven.compiler.target>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>com.kumuluz.ee</groupId>
@@ -30,7 +25,7 @@
             <artifactId>kumuluzee-jax-rs-jersey</artifactId>
         </dependency>
         <dependency>
-            <groupId>si.fri.prpo.govorilneure</groupId>
+            <groupId>si.fri.prpo.govorilneure.m2</groupId>
             <artifactId>storitve</artifactId>
         </dependency>
     </dependencies>
